
* The MtoA procedural translator now automatically outputs any shading groups which are connected as inputs to the procedural in some way (connected to a parameter for instance). This can be useful to allow the procedural to assign maya shaders to the objects it generates, even though those shaders may not be assigned to anything in the Maya scene.

Additions :

* Added a test case for ColorSpaceTransformOp that to test color space conversion on images that have been premulted with an alpha. The test will fail due to the current
  implementation ignoring whether the image is premulted or not. This differs to such nodes as the CubeColorTransformOp that has parameters to unpremult the image first...

Bug Fixes :

* Fixed bug which prevented the spline editor window for spline parameters in Maya being opened more than once.

7.6.0 :

Improvements :

* changed MtoA Translater to be compatible with versions > 0.18.0 

* IECoreArnold::Renderer::shader() now additionally accepts shader names of the form "reference:nodeName", to allow shaders already in an ass file to be referenced by procedurals.

* The IECoreMaya::TransformationMatrixManipulator now draws an optional box if a ["UI"]["manipulatorBox"] user data item is present on the parameter.

* linearObjectInterpolation now supports the interpolation of Primitive classes.

Bug Fixes :

* Fixed crashes caused by null data in PrimitiveVariable::operator==.

7.5.0 :

Additions :

* Added the beginings of Alembic read support in contrib/IECoreAlembic.

Improvements :

* The Arnold output driver now supports the rendering of multiple outputs via a single driver. Channel names are prefixed with the arnold aov name so the may be distinguished.

* The MPlayDisplayDriver now supports multiple output planes, based on grouping channel names with common prefixes.

* Added python binding for the SearchPath copy constructor.

* The ClassLoader class now has a searchPath() method to provide access to the paths used to find classes.
